# src/api/swagger/swagger.yaml
@@ -18,21 +18,6 @@ consumes:
 produces:
   - application/json
 paths:
-  /:
-    x-swagger-router-controller: index
-    get:
-      description: list elements to provide to the user based on criteria provided
-      operationId: ping
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/Pong"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
   /git/push:
     x-swagger-router-controller: git
     get:
@@ -52,12 +37,7 @@ paths:
       description: api endpoint for github to allow branch sync
       operationId: push
       parameters:
-        - name: webhookInformation
-          in: body
-          description: contain Github webhook information
-          required: true
-          schema:
-            $ref: "#/definitions/webhookInformation"
+        - $ref: "#/parameters/webhookInformation"
       responses:
         "200":
           description: Success
@@ -101,9 +81,10 @@ definitions:
     type: object
 # define reusable parameters:
 parameters:
-    demoparam:
-      name: demoparam
-      in: query
-      description: exemple of param to be provided
-      required: false
-      type: string
+    webhookInformation:
+      name: webhookInformation
+      in: body
+      description: contain Github webhook information
+      required: true
+      schema:
+        $ref: "#/definitions/webhookInformation"
